--- a/BlazorWebAssembly/Client/_Imports.razor
+++ b/BlazorWebAssembly/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using Microsoft.JSInterop
 @using BlazorWebAssembly.Client
 @using BlazorWebAssembly.Client.Shared
+@using Microsoft.AspNetCore.Authorization
