--- a/BlazorWebAssembly/Client/Pages/Counter.razor
+++ b/BlazorWebAssembly/Client/Pages/Counter.razor
@@ -1,5 +1,6 @@
 ﻿@page "/counter"
 
+@attribute [Authorize(Roles="Demo")]
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
@@ -7,6 +8,17 @@
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+
+<AuthorizeView>
+    <Authorized>
+        <ul>
+            @foreach (var claim in context.User.Claims)
+            {
+                <li><b>@claim.Type</b>: @claim.Value</li>
+            }
+        </ul>
+    </Authorized>
+</AuthorizeView>
 
 @code {
     private int currentCount = 0;
